--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 
 title: Curatorial Voice
 description: A British Academy Project
+logo: https://github.com/CuratorialVoice/CuratorialVoice.github.io/blob/master/assets/images/BA-logo.png
