--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Curatorial Voice
-description: A British Academy Project
+description: Legacy Descriptions of Art Objects and their Contemporary Uses
 logo: /assets/images/BA-logo.png
 show_downloads: true
