--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 
 title: Curatorial Voice
 description: Legacy Descriptions of Art Objects and their Contemporary Uses
-logo: /assets/images/BA-logo.png
+logo: /assets/images/BA-UoS-SHL-combinedlogo.png
 show_downloads: true
