--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 
 title: Curatorial Voice
+subtitle: Legacy Descriptions of Art Objects and their Contemporary Uses
 description: Legacy Descriptions of Art Objects and their Contemporary Uses
 logo: /assets/images/BA-UoS-SHL-combinedlogo2.png
 show_downloads: true
