--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Curatorial Voice
-subtitle: Legacy Descriptions of Art Objects and their Contemporary Uses
-description: Legacy Descriptions of Art Objects and their Contemporary Uses
+description: A [Sussex Humanities Lab](http://www.sussex.ac.uk/shl/) project
 logo: /assets/images/BA-UoS-SHL-combinedlogo2.png
 show_downloads: true
