--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Curatorial Voice
-description: A [Sussex Humanities Lab](http://www.sussex.ac.uk/shl/) project
+description: A Sussex Humanities Lab project
 logo: /assets/images/BA-UoS-SHL-combinedlogo2.png
 show_downloads: true
